# Ermakova2018CompPsy

./: README.md  extract_data.py  full_exp.sh  output_to_csv.py  real_data_experiment.py
JTC/cc/: Makefile  Makefile.am  Makefile.in  generate_data  parameter
JTC/cc/blitzpp-blitz-19079b6/: Makefile  Makefile.in  aclocal.m4  blitz-uninstalled.pc  config.status  configure  libtool
JTC/cc/blitzpp-blitz-19079b6/autom4te.cache/: output.0  requests  traces.0  traces.1
JTC/cc/blitzpp-blitz-19079b6/benchmarks/: Makefile  Makefile.in  plot_benchmarks.m
JTC/cc/blitzpp-blitz-19079b6/blitz/: Makefile  Makefile.in  config.h
JTC/cc/blitzpp-blitz-19079b6/doc/: Makefile  Makefile.in
JTC/cc/blitzpp-blitz-19079b6/examples/: Makefile  Makefile.in
JTC/cc/blitzpp-blitz-19079b6/lib/: Makefile  Makefile.in
JTC/cc/blitzpp-blitz-19079b6/random/: Makefile  Makefile.in
JTC/cc/blitzpp-blitz-19079b6/testsuite/: Makefile  Makefile.in
JTC/cc/gsl-2.4/: Makefile  Makefile.in  config.h  config.status  configure  gsl-histogram  gsl-randist  libgsl.la  libtool
JTC/cc/gsl-2.4/.deps/: gsl-histogram.Po  gsl-randist.Po
JTC/cc/gsl-2.4/.libs/: gsl-histogram  gsl-randist  libgsl.lai
JTC/cc/gsl-2.4/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
JTC/cc/gsl-2.4/blas/: Makefile  Makefile.in  blas.lo  libgslblas.la
JTC/cc/gsl-2.4/block/: Makefile  (+3 more)
JTC/cc/hd/: blitz_array_aux.h  jtc.h  jtc_em.h  jtc_exp.h  maths.h  nr_ut.h  utility.h
JTC/cc/mth/: blitz_array_aux.cc  em_rb_beads07.cc  generate_data.cc  jtc.cc  jtc_em.cc  jtc_exp.cc  maths.cc  nr_ut.cc  utility.cc
(+1308 files in other folders)
